Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-131505

Unable to create multisampled depth-only pipeline

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: P2: Important P2: Important
    • 6.8.2, 6.9.0 FF
    • 6.8, 6.9
    • Qt RHI
    • None
    • f6d67ed9b (dev), f60fd291b (6.8)

      It's not possible to create depth-stencil multisampled pipeline without color attachments. This happens because the implementation only uses the color formats to check if multisampling is supported for that pipeline and when its depth only pipeline the check always fails and defaults to no multisampling.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            anmaatta Antti Määttä
            anmaatta Antti Määttä
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes